<resources>
    <string name="app_name">Cozy Cabins</string>
    <string name="booking_app_name">Cozy Cabins</string>
    <string name="home">Home</string>
    <string name="reservations">Reservations</string>
    <string name="profile">Profile</string>
    <string name="notifications">Notifications</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="update">Update</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="country">Country</string>
    <string name="edit">Edit</string>
    <string name="phone_number">Phone number</string>
    <string name="logout">Log out</string>
    <string name="save">Save</string>
    <string name="favorite_accommodations">Favorite accommodations</string>
    <string name="notifications_settings">Notifications settings</string>
    <string name="profile_image">Profile image</string>
    <string name="change_profile_image">Change profile image</string>
    <string name="last_name">Last name</string>
    <string name="delete_account">Delete account</string>
    <string name="notification_title">Title</string>
    <string name="notification_description">Description</string>
    <string name="kopaonik_hotel">Hotel Grand Kopaonik</string>
    <string name="kopaonik_hotel_desc">Moderan i udoban hotel Grand Kopaonik se nalazi na 1.770 metara nadmorske visine u samom centru Kopaonika i nudi veličanstveni pogled na Nacionalni park Kopaonik.</string>
    <string name="details">details</string>
    <string name="filters">Filters</string>
    <string name="sort">Sort</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="Accommodations">Accommodations</string>
    <string name="accommodations">Accommodations</string>
    <string name="host_accommodations">Host accommodations</string>
    <string name="approve">Approve</string>
    <string name="reject">Reject</string>
    <string name="host">HOST</string>
    <string name="guest">GUEST</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_accommodation">Add accommodation</string>
    <string name="get_report">Get report</string>
    <string name="Details">Details</string>
    <string name="ok">OK</string>
    <string name="report">Report</string>
    <string name="pick_start_date">Pick start date</string>
    <string name="pick_end_date">Pick end date</string>
    <string name="set_periods">Set Periods</string>
    <string name="get_pdf">Get pdf\n</string>
    <string name="generate_report">Generate report</string>
    <string name="get_pdf_1">Get PDF</string>
    <string name="accommodation_name">Accommodation</string>
    <string name="profit">Profit</string>
    <string name="manage_review">Manage review</string>
    <string name="delete_report">Delete report</string>
    <string name="delete_review1">Delete review</string>
    <string name="accommodation_host_name">Accommodation/Host Name:</string>
    <string name="comment">Comment:</string>
    <string name="grade">Grade:</string>
    <string name="username">Username:</string>
    <string name="reviews">Reviews</string>
    <string name="review_comment">Comment</string>
    <string name="host_reviews">Host reviews</string>

</resources>