<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/accommodations"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/accommodations" />

    <item
        android:id="@+id/reservations"
        android:icon="@drawable/baseline_reservations_24"
        android:title="@string/reservations" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/baseline_account_circle_24"
        android:title="@string/profile" />

    <item
        android:id="@+id/notifications"
        android:icon="@drawable/baseline_notifications_24"
        android:title="@string/notifications" />

    <item
        android:id="@+id/approve_and_manage_review"
        android:icon="@drawable/baseline_checklist_24"
        android:title="@string/approve" />


</menu>