<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.accommodation.AccommodationPageFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >


        <LinearLayout
            android:id="@+id/linear2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            >

            <Button
                android:id="@+id/btnFilters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="@string/filters"
                android:fontFamily="@font/righteous"
                />


            <Spinner
                android:id="@+id/btnSort"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="3sp"
                android:layout_marginHorizontal="10sp"
                android:layout_marginVertical="3sp"
                android:layout_weight="0.3"
                android:contentDescription="@string/sort"
                android:text="@string/sort"
                android:tooltipText="@string/sort" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp">

            <!-- "Add accommodation" button -->
            <Button
                android:id="@+id/btnAddAccommodation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="4dp"
                android:text="@string/add_accommodation"
                android:fontFamily="@font/righteous"
                android:visibility="gone"/>

            <!-- "Get report" button -->
            <Button
                android:id="@+id/btnGetReport"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="4dp"
                android:text="@string/get_report"
                android:fontFamily="@font/righteous"
                android:visibility="gone"/>
        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:id="@+id/scroll_products_list"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>