<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:gravity="center_vertical">
    <ImageView
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/ic_mountain_logo_foreground"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/report"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:layout_gravity="center"
        android:padding="16dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_margin="10dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutStartDate"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10sp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextStartDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pick_start_date"
                android:fontFamily="@font/righteous"
                android:textSize="18sp"
                android:focusable="false"
                android:textColorHint="@color/blue"
                android:textColor="@color/blue"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutEndDate"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextEndDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pick_end_date"
                android:fontFamily="@font/righteous"
                android:textSize="18sp"
                android:focusable="false"
                android:textColorHint="@color/blue"
                android:textColor="@color/blue"/>

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btnGenerateReport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:ems="10"
            android:text="@string/generate_report"
            android:layout_marginTop="20dp" />

    </LinearLayout>
</LinearLayout>