<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <RelativeLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:background="@drawable/wave"/>

    <LinearLayout
        android:id="@+id/logoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="25dp"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/loginInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/ic_letter_b_foreground"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/loginInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoLayout"
        app:layout_constraintBottom_toTopOf="@id/loginInputLayout">

        <EditText
            android:id="@+id/editTextLoginEmailAddress"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:ems="13"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:layout_marginBottom="15dp"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:id="@+id/editTextLoginPassword"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:ems="13"
            android:layout_gravity="center_horizontal"
            android:inputType="textPassword"
            android:hint="@string/password" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LoginButtonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/loginInputLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="7"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/blue"
            android:textColor="@android:color/white"
            android:text="@string/login" />
        <Button
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="7"
            android:layout_marginStart="16dp"
            android:backgroundTint="@color/blue"
            android:textColor="@android:color/white"
            android:text="@string/register" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>